Added fix for index

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-wrap-amd-infer",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Gulp plugin to automatically wrap and optionally compile files for testing AMD",
   "keywords": [
     "gulpplugin",
@@ -21,7 +21,7 @@
   "dependencies": {
     "coffee-script": "*",
     "event-stream": "*",
-    "semver": "^2.3.1",
+    "semver": "*",
     "underscore": "*"
   }
 }
